src/objects/ADvendio__PublicSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ADvendio__LoggingUntil__c</fullName>
        <description>Until this date and time ADvendio logs more detailed information to the debug logs (which will slow ADvendio down).</description>
        <inlineHelpText>Until this date and time ADvendio logs more detailed information to the debug logs (which will slow ADvendio down).</inlineHelpText>
        <label>Extra logging until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCellColorEvent__c</fullName>
        <label>PositionChart: CellColor &quot;Event&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCellColorNotAvailable__c</fullName>
        <label>PositionChart: CellColor &quot;Not available&quot;</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColor0__c</fullName>
        <description>The background color to use in a cell if there is no offered and booked inventory. Default is green (#5CFC85).</description>
        <label>Position Chart: Count cell color 0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColor1__c</fullName>
        <description>The background color to use in a cell if there is offered but no booked inventory. Default is light green (#CBFFC2).</description>
        <label>Position Chart: Count cell color 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColor2__c</fullName>
        <description>The background color to use in a cell if there is booked inventory but the number of booked (and offered) inventory doesn&apos;t exceed the maximal availability. Default is yellow  (#FFFB45).</description>
        <label>Position Chart: Count cell color 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColorPercent1__c</fullName>
        <description>Reserved.</description>
        <label>Position Chart: Count cell colorPercent1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColorPercent2__c</fullName>
        <description>Reserved.</description>
        <label>Position Chart: Count cell colorPercent2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartCountCellColorPercent3__c</fullName>
        <description>Reserved.</description>
        <label>Position Chart: Count cell colorPercent3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartDefaultSelTemplateName__c</fullName>
        <inlineHelpText>The template with this name is pre-selected in the chart type select list of the Position Chart.</inlineHelpText>
        <label>Position Chart: DefaultSelTemplateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartDisplayContentColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position Chart: Display Content Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__PositionChartDisplayContentFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position Chart: Display Content Filter</label>
        <type>Checkbox</type>
    </fields>
    <label>ADvendio Settings</label>
</CustomObject>